typescript/checker/tests/conformance/parser/ecmascript5/Types/parserTypeQuery2.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            31,
        ),
        hi: BytePos(
            32,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Types/parserTypeQuery2.ts:1:15
  |
1 | var v: typeof A;
  |               ^

